Added padding to nav li

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .875em;
-	padding: 0 10px;
+	padding: 10px 10px;
 	list-style: none;
 	
 	
